--- a/_data/const/contact.yml
+++ b/_data/const/contact.yml
@@ -4,25 +4,28 @@
 
 github:
   icon: "fa fa-github"
-  url: "https://www.github.com"
+  url: "https://github.com"
 email:
   icon: "fa fa-envelope-o"
   url: ""
-linkedin:
-  icon: "fa fa-linkedin"
-  url: "https://www.linkedin.com"
-twitter:
-  icon: "fa fa-twitter"
-  url: "https://www.twitter.com"
-instagram:
-  icon: "fa fa-instagram"
-  url: "https://www.instagram.com"
-youtube:
-  icon: "fa fa-youtube-play"
-  url: "https://www.youtube.com/channel"
-facebook:
-  icon: "fa fa-facebook"
-  url: "https://www.facebook.com"
+#linkedin:
+#  icon: "fa fa-linkedin"
+#  url: "https://www.linkedin.com"
+#twitter:
+#  icon: "fa fa-twitter"
+#  url: "https://www.twitter.com"
+#instagram:
+#  icon: "fa fa-instagram"
+#  url: "https://www.instagram.com"
+#youtube:
+#  icon: "fa fa-youtube-play"
+#  url: "https://www.youtube.com/channel"
+#facebook:
+#  icon: "fa fa-facebook"
+#  url: "https://www.facebook.com"
+bilibili:
+  icon: "fa-brands fa-bilibili"
+  url: "https://space.bilibili.com"
 # add your new contact
 # your_new_contact:
 #   icon: "fa fa-font"
