--- a/_data/content/projects/en.yml
+++ b/_data/content/projects/en.yml
@@ -5,32 +5,66 @@
 page_data:
   main:
     header: "Projects"
-    info: "Your Project page description."
+    info: "MHYC Projects"
     text_color: "white"
     # if you don't want to use background image, comment it. back_color will be activated.
-    img: ":projects-heading.jpg"
+    img: "https://bing.img.run/1920x1080.php"
     back_color: "lightblue"
 
   category:
-    - title: "Example"
-      type: id_example
-      color: "gray"
-    - title: "Picture"
-      type: id_picture
-      color: "#62b462"
-    - title: "Quote"
-      type: id_quote
-      color: "#2FD0ED"
+    - title: "Software"
+      type: id_software
+      color: "#5B6EE1"
+    - title: "Hardware"
+      type: id_hardware
+      color: "#639BFF"
+    - title: "Common"
+      type: id_common
+      color: "#5FCDE4"
 
   list:
-    # example
-    - type: id_example
-      project_name: "Example Project"
-      project_excerpt: "Examples"
-      img: ":project1_thumb.jpg"
-      img_title: "img title1"
-      date: "2021-03-13"
+    # software
+    - type: id_software
+      project_name: "MHYChat"
+      project_excerpt: "Online Chat platform"
+      img: ":mhychat.png"
+      img_title: "MHYChat"
+      date: "2021-02-17"
       post: |
+        
+        Introducing ——
+        
+        # MHYChat
+        {:data-align="center"}
+        
+        Features：
+        - chat
+        - Show user is typing
+        - State of user
+        - KaTeX support
+        - Emoji
+        - Sub
+        - Discuss
+        - Upload Files, Viedos and Pictrues
+        - Play videos online
+        
+        Todo：
+        - Bind Email
+        - Forget password
+        - Client
+        
+        If you want to try, click [chat.mhyc.tech](http://chat.mhyc.tech/)
+        
+        Based on Rocket.Chat
+    
+    - type: id_test
+      project_name: "Example Project"
+      project_excerpt: "Mahatma Gandhi "
+      img: ":project2_thumb.jpg"
+      img_title: "img title6"
+      date: "2021-12-20"
+      post: |
+        Be the change that you wish to see in the world.
         # Examples
 
         This is an example page to display markdown related styles for Mr. Green Jekyll Theme.
@@ -73,7 +107,7 @@ page_data:
 
         #### Texts
 
-        Quoted text `Hello world`
+        commond text `Hello world`
 
         Bold text **Hello world**
 
@@ -81,7 +115,7 @@ page_data:
 
         kbd text <kbd>Hello world</kbd>
 
-        #### Blockquote
+        #### Blockcommon
 
         > **William Shakespeare**, Let me not to the marriage of true minds
         Admit impediments. Love is not love
@@ -164,69 +198,9 @@ page_data:
 
         ### Code
 
-        #### Quote
+        #### common
 
         ```python
         for i in range(5, 10):
           print(i)
         ```
-
-    # picture
-    - type: id_picture
-      project_name: "Example Project"
-      project_excerpt: "Picture"
-      img: ":project2_thumb.jpg"
-      img_title: "img title2"
-      date: "2021-04-23"
-      post: |
-        # Title
-        This is project content.
-
-        ![Image](:project2_thumb.jpg)
-
-    # quote
-    - type: id_quote
-      project_name: "Example Project"
-      project_excerpt: "William Shakespeare"
-      #img: ":project1_thumb.jpg"
-      #img_title: "img title3"
-      date: "2021-05-27"
-      post: |
-        Let me not to the marriage of true minds
-        Admit impediments. Love is not love
-        Which alters when it alteration finds,
-        Or bends with the remover to remove.
-        O no, it is an ever-fixed mark
-        That looks on tempests and is never shaken;
-        It is the star to every wand'ring barque,
-        Whose worth's unknown, although his height be taken.
-        Love's not Time's fool, though rosy lips and cheeks
-        Within his bending sickle's compass come;
-        Love alters not with his brief hours and weeks,
-        But bears it out even to the edge of doom.
-        If this be error and upon me proved,
-        I never writ, nor no man ever loved.
-    - type: id_quote
-      project_name: "Example Project"
-      project_excerpt: "Albert Einstein"
-      img: ":project2_thumb.jpg"
-      img_title: "img title4"
-      date: "2021-06-08"
-      post: |
-        Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.
-    - type: id_quote
-      project_name: "Example Project"
-      project_excerpt: "Mae West"
-      img: ":project1_thumb.jpg"
-      img_title: "img title5"
-      date: "2021-08-20"
-      post: |
-        You only live once, but if you do it right, once is enough.
-    - type: id_quote
-      project_name: "Example Project"
-      project_excerpt: "Mahatma Gandhi "
-      img: ":project2_thumb.jpg"
-      img_title: "img title6"
-      date: "2021-12-20"
-      post: |
-        Be the change that you wish to see in the world.
