--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -16,12 +16,12 @@ google_font_precon_url: https://fonts.gstatic.com
 #               Language
 ###########################################################
 # need to match filename in _data/lang/[language].yml
-default_lng: zh
+default_lng: en
 
 # to prevent adding languages with no folder
 # single language disables language switch
 # language order is linked to array order
-language_switch_lang_list: [zh, en]
+language_switch_lang_list: [en, zh]
 
 # if the opened page is not in the user's language list,
 # suggest language(s) matching with the one(s) in browser language list and user language list.
