--- a/_data/owner.yml
+++ b/_data/owner.yml
@@ -2,7 +2,7 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "MHYC.EU.ORG"
+brand: "MHYC.eu.org"
 
 # used for seo meta post author (if it's not defined in post)
 name: "MHYC 133"
