--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -3,5 +3,5 @@ layout: json/manifest
 
 # optional
 # to disable this page, simply set published: false or delete this file
-#published: false
+published: false
 ---
