--- a/_data/content/projects/zh.yml
+++ b/_data/content/projects/zh.yml
@@ -58,7 +58,7 @@ page_data:
         - 不需要很深的理论基础。这是一个很大的特点。 百度就是你最好的理论导师。讲述太多的理论会让一些东西看起来比他们实际更复杂。
         - 这些课程真的很简短，大约 5~15 分钟就可以完成，相信我也相信你自己，你一定能够完成它们！
 
-        目前，已经完成了1至17课的注解，涉及到了内存，栈，寄存器，CPU指令集，键盘输入，32位保护模式
+        目前，已经完成了1至17课的注解，涉及到了内存，栈，寄存器，CPU指令集，键盘输入，32位保护模式，C语言，交叉编译器，显驱，视频滚动
 
         2023：目前不更新了，主要精力在人工智能的诞生上
 
