--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,29 +1,26 @@
-- title: Halve Jekyll Theme
-  url: http://taylantatli.me/Halve
-  image: http://taylantatli.me/Halve/images/halve-home-image.png
-  completed: false
-
-- title: Moon Jekyll Theme
-  url: http://taylantatli.me/Moon
-  image: https://cloud.githubusercontent.com/assets/754514/14509720/61c61058-01d6-11e6-93ab-0918515ecd56.png
+- title: 一个人工智能的诞生
+  url: https://github.com/MHYCWasTaken/Birth-of-an-AI
+  image: images/projects/birth_of_an_ai.png
   completed: true
+  introduce: |
+    <p style="font-size:14px">从最简单的二元分类，到坐标系，神经网络，矩阵变换，手算梯度下降<br>
+    机器学习正给世界带来重大影响。  <br>
+    小区门口的人脸识别开锁、手机里的信息流推荐、路上的自动驾驶，这一切技术的背后都是机器学习。  <br>
+    这技术似乎掌握在少部分精英手中。  <br>
+    拆开人工智能的黑箱，丢开别人提供的算法和函数  <br>
+    从鳄鱼和蛇开始，理解人工智能<br></p>
+    <p style="font-size:14px;color=#fff">如果网址上不去请安装Watt Toolkit加速（https://steampp.net）</p>
 
-- title: Ramme Jekyll Theme
-  url: http://taylantatli.me/Ramme
-  image: https://raw.githubusercontent.com/TaylanTatli/Ramme/master/assets/img/screenshot-post.png
+
+- title: 从零开始编写一个操作系统——注解版
+  url: https://mhyc.eu.org/better-os-tutorial-cn
+  image: 
   completed: true
-
-- title: Daisy Pelican Theme
-  url: http://taylantatli.me/Daisy-Pelican-Theme/
-  image: https://raw.githubusercontent.com/TaylanTatli/Daisy-Pelican-Theme/master/Preview-1.png
-  completed: true
-
-- title: Block Icon Theme
-  url: https://github.com/TaylanTatli/Block-Icon-Theme
-  image: https://raw.githubusercontent.com/TaylanTatli/Block-Icon-Theme/master/Preview.png
-  completed: false
-
-- title: Start Page
-  url: http://taylantatli.me/StartPage/
-  image: https://raw.githubusercontent.com/TaylanTatli/StartPage/master/preview.png
-  completed: false
+  introduce: |
+    <p style="font-size:14px">
+    从0开始编写一个操作系统吧！<br>
+    （这是os-tutorial的克隆仓库，添加了注解、代码内注释和网页Docs版）<br>
+    - 这是一本代码编写手册，尤其适合那些喜欢计算机底层技术的人。<br>
+    - 不需要很深的理论基础。<br>
+    - 这些课程真的很简短，大约 5~15 分钟就可以完成，相信我也相信你自己，你一定能够完成它们！<br>
+    </p>
