--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -13,7 +13,7 @@
 
 
 - title: 一个人工智能的诞生（Gitlab国内稳定访问版）
-  url: https://github.com/MHYCWasTaken/Birth-of-an-AI
+  url: https://gitlab.com/MHYCWasTaken/Birth-of-an-AI
   image: images/projects/birth_of_an_ai.png
   completed: true
   introduce: |
